<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyContentProvider</string>
    <string name="action_settings">Settings</string>
    <string name="add_name">Add Name</string>
    <string name="get_names">Retrieve Students</string>
    <string name="hintGrade">Student Grade</string>
    <string name="hintName">Student Name</string>
    <string name="Grade_Default">Grade</string>
    <string name="Name_Default">Name</string>
</resources>
